# ET-MM

./: README.md  setup.sh
runtime/: config.cfg
setup/: compile_rust.sh  database.sh  environment.sh
src/database/: create_database.pgsql  create_default_match_making_groups.pgsql  create_user.pgsql
src/database/functions/: register_1v1.pgsql  register_3v3.pgsql  register_6v6.pgsql
src/database/functions/internal/: add_user.pgsql
src/database/tables/: 1_match_making_groups.pgsql  2_match_making_users.pgsql  match_making_users.pgsql  users.pgsql  users_1v1.pgsql  users_3v3.pgsql  users_6v6.pgsql
src/rust/: Cargo.toml
src/rust/src/: config.rs  database.rs  logger.rs  main.rs
src/rust/src/bot/: config.rs  mod.rs
src/rust/src/bot/commands/: mod.rs  ping.rs  subscribe.rs  unsubscribe.rs
