[package]
name = "et-mm-bot"
version = "0.0.1"
authors = ["keith miller <keith.miller@thermosystems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres   = "0.17.2"
slog       = { version = "2.4.1", features = ["release_max_level_info"] }
slog-async = "2.3.0"
slog-term  = "2.4.0"
