[package]
name = "et-mm-bot"
version = "0.0.2"
authors = ["keith miller <keith.miller@thermosystems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog           = { version = "2.4.1", features = ["release_max_level_info"] }
slog-async     = "2.3.0"
slog-term      = "2.4.0"
tokio          = { version = "0.2", features = ["macros"] }
tokio-postgres = "0.5.4"

[dependencies.serenity]
git      = "https://github.com/Lakelezz/serenity/"
branch   = "await"
features = ["cache", "framework", "standard_framework", "rustls_backend"]
